fix: wrap-instructor-info css to correctly display staff buttons on Show Answer

--- a/lms/static/sass/partials/lms/theme/_extras.scss
+++ b/lms/static/sass/partials/lms/theme/_extras.scss
@@ -642,7 +642,10 @@ body.view-in-course {
 @media (min-width: 768px) {
   .wrap-instructor-info {
     display: flex !important;
+    flex-wrap: wrap;
     gap: 10px;
+    width: 100%;
+    flex-shrink: 0;
   }
 }
 .wrap-instructor-info .instructor-info-action {
